@@ -1,3 +1,8 @@
+2019-10-15  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92094
+	* gfortran.dg/pr92094.f90: New testcase.
+
 2019-10-15  Hongyu Wang  <hongyu.wang@intel.com>
 
 	PR target/92035
